--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,18 +4,20 @@ server {
     server_name 62.84.123.226;
 
     location /media/ {
-        root /var/html/;
-    }
-
-    location /static/admin/ {
-        root /var/html/;
+        autoindex on;
+        alias /media/;
     }
 
     location /static/rest_framework/ {
-        root /var/html/;
+        autoindex on;
+        alias /static/rest_framework/;
+    }
+
+    location /static/admin/ {
+        autoindex on;
+        alias /static/admin/;
     }
     
-
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
     }
