--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,162 +1,85 @@
-name: Main Foodgram workflow
+name: foodgram_workflow
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   tests:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:13.10
-        env:
-          POSTGRES_USER: adm
-          POSTGRES_PASSWORD: adm
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: 3.9
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
-        pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt 
-    - name: Test with flake8 and django tests
-      env:
-        POSTGRES_USER: adm
-        POSTGRES_PASSWORD: adm
-        POSTGRES_DB: postgres
-        DB_HOST: 127.0.0.1
-        DB_PORT: 5432
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        pip install -r backend/requirements.txt
+    - name: Test with flake8
       run: |
-        python -m flake8 backend/
-        cd backend/
-        python manage.py test
-
-  frontend_tests:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up nodeJS
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-
-    - name: Install dependencies
-      run: |
-        cd frontend/
-        npm ci
-
-    - name: Test frontend
-      run: |
-        cd frontend/
-        npm run test
-
+        python -m flake8 
   build_and_push_to_docker_hub:
-    name: Push Docker image to DockerHub
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v1 
       - name: Login to Docker 
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v4
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }} 
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
         with:
-          context: ./backend/
+          context: backend
+          file: backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_BACKEND }}
-
-  build_frontend_and_push_to_docker_hub:
-    name: Push frontend Docker image to DockerHub
-    runs-on: ubuntu-latest
-    needs: frontend_tests
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
-        uses: docker/login-action@v2
+          tags: $ {{ secrets.DOCKER_BACKEND }}
+      - name: Push frontend
+        uses: docker/build-push-action@v2 
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./frontend/
+          context: frontend/
           push: true
-          tags: ${{ secrets.DOCKER_FRONTEND }}
-
-  build_gateway_and_push_to_docker_hub:
-    name: Push gateway Docker image to DockerHub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./nginx/
-          push: true
-          tags: ${{ secrets.DOCKER_GATEWAY }}
+          tags: $ {{ secrets.DOCKER_FRONTEND }}
   deploy:
-      runs-on: ubuntu-latest
-      needs: 
-        - build_and_push_to_docker_hub
-        - build_frontend_and_push_to_docker_hub
-        - build_gateway_and_push_to_docker_hub
-      steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-      - name: Copy docker-compose.yml via ssh
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: "docker-compose.production.yml"
-          target: "foodgram"
-      - name: Executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: |
-            cd foodgram
-            # Выполняет pull образов с DockerHub
-            sudo docker compose -f docker-compose.production.yml pull
-            # Перезапускает все контейнеры в docker compose
-            sudo docker compose -f docker-compose.production.yml down
-            sudo docker compose -f docker-compose.production.yml up -d
-            # Выполняет миграции и сбор статики
-            sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-            sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic --no-input
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }} 
+        script: |
+          cd foodgram/infra
+          sudo docker pull $ {{ secrets.DOCKER_BACKEND }}
+          sudo docker pull $ {{ secrets.DOCKER_FRONTEND }}
+          sudo docker-compose stop
+          sudo docker-compose rm backend
+          rm .env
+          touch .env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          sudo docker-compose up -d
+  
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
