--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,93 +7,71 @@ on:
     branches: [ main ]
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install flake8 pep8-naming flake8-broken-line flake8-return
-        pip install -r backend/requirements.txt
-    - name: Test with flake8
-      run: |
-        python -m flake8 
-  build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install flake8 pep8-naming flake8-broken-line flake8-return
+          pip install -r backend/requirements.txt
+
+      - name: Test with flake8
+        run: |
+          python -m flake8 
+
+  build-and-push:
     runs-on: ubuntu-latest
-    needs: tests
-    if: github.ref == 'refs/heads/master'
+    needs: test
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }} 
-          password: ${{ secrets.DOCKER_PASSWORD }} 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          context: backend
-          file: backend/Dockerfile
-          push: true
-          tags: $ {{ secrets.DOCKER_BACKEND }}
-      - name: Push frontend
-        uses: docker/build-push-action@v2 
-        with:
-          context: frontend/
-          push: true
-          tags: $ {{ secrets.DOCKER_FRONTEND }}
+      - name: Build and push to Docker Hub
+        run: |
+          docker build -t my-docker-hub-username/my-image.
+          docker push my-docker-hub-username/my-image
+
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    if: github.ref == 'refs/heads/master'
+    needs: build-and-push
     steps:
-    - name: executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }} 
-        script: |
+      - name: Deploy
+        run: |
+          ssh ${{ secrets.USER }}@${{ secrets.HOST }} << EOF
           cd foodgram/infra
-          sudo docker pull $ {{ secrets.DOCKER_BACKEND }}
-          sudo docker pull $ {{ secrets.DOCKER_FRONTEND }}
+          sudo docker pull ${{ secrets.DOCKER_BACKEND }}
+          sudo docker pull ${{ secrets.DOCKER_FRONTEND }}
           sudo docker-compose stop
           sudo docker-compose rm backend
-          rm .env
-          touch .env
-          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          rm.env
+          touch.env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >>.env
+          echo DB_NAME=${{ secrets.DB_NAME }} >>.env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >>.env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >>.env
+          echo DB_HOST=${{ secrets.DB_HOST }} >>.env
+          echo DB_PORT=${{ secrets.DB_PORT }} >>.env
           sudo docker-compose up -d
-  
-  send_message:
+          EOF
+
+  send-message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-    - name: Send message
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: |
-          Деплой foodgram завершен.
+      - name: Send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            Деплой foodgram завершен.
 
-          author: ${{ github.actor }}
+            author: ${{ github.actor }}
 
-          message: ${{ github.event.head_commit.message }}
-          
-          link: https://github.com/${{ github.repository }}/commit/${{ github.sha }}.
+            message: ${{ github.event.head_commit.message }}
+
+            link: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
