--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,57 +7,83 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
+    test:
+        runs-on: ubuntu-latest
+        if: github.ref == 'refs/heads/main'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip 
-          pip install flake8 pep8-naming flake8-broken-line flake8-return
-          pip install -r backend/requirements.txt
+        steps:
+        - uses: actions/checkout@v2
+        - name: Set up Python
+          uses: actions/setup-python@v2
+          with:
+             python-version: 3.9
 
-      - name: Test with flake8
-        run: |
-          python -m flake8 
+        - name: Install dependencies
+          run: |
+             python -m pip install --upgrade pip
+             pip install flake8 pep8-naming flake8-broken-line flake8-return
+             pip install -r backend/requirements.txt
 
-  build-and-push:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Build and push to Docker Hub
-        run: |
-          docker build -t my-docker-hub-username/my-image.
-          docker push my-docker-hub-username/my-image
+        - name: Test with flake8
+          run: |
+               python -m flake8
+    build_and_push_to_docker_hub:
+          name: Push Docker image to Docker Hub
+          runs-on: ubuntu-latest
+          needs: test
+          if: github.ref == 'refs/heads/main'
+          steps:
+          - name: Check out the repo
+            uses: actions/checkout@v2
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    steps:
-      - name: Deploy
-        run: |
-          ssh ${{ secrets.USER }}@${{ secrets.HOST }} << EOF
-          cd foodgram/infra
-          sudo docker pull ${{ secrets.DOCKER_BACKEND }}
-          sudo docker pull ${{ secrets.DOCKER_FRONTEND }}
-          sudo docker-compose stop
-          sudo docker-compose rm backend
-          rm.env
-          touch.env
-          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >>.env
-          echo DB_NAME=${{ secrets.DB_NAME }} >>.env
-          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >>.env
-          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >>.env
-          echo DB_HOST=${{ secrets.DB_HOST }} >>.env
-          echo DB_PORT=${{ secrets.DB_PORT }} >>.env
-          sudo docker-compose up -d
-          EOF
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v1
 
+          - name: Login to Docker
+            uses: docker/login-action@v1
+            with:
+               username: ${{ secrets.DOCKER_USERNAME }}
+               password: ${{ secrets.DOCKER_PASSWORD }}
+
+          - name: Push to DockerHub
+            uses: docker/build-push-action@v2
+            with:
+              push: true
+              context: ./backend/
+              tags: ${{ secrets.DOCKER_BACKEND }}
+    deploy:
+      runs-on: ubuntu-latest
+      needs: build_and_push_to_docker_hub
+      if: github.ref == 'refs/heads/main'
+      steps:
+          - name: executing remote ssh commands to deploy
+            uses: appleboy/ssh-action@master
+            with:
+               host: ${{ secrets.HOST }}
+               username: ${{ secrets.USER }}
+               key: ${{ secrets.SSH_KEY }}
+               passphrase: ${{ secrets.PASSPHRASE }}
+               stack_file_name: docker-compose.yaml
+               script: |
+                  # sudo docker pull ${{ secrets.DOCKER_FRONTEND }}
+                  sudo docker pull ${{ secrets.DOCKER_BACKEND }}
+                  sudo docker-compose stop
+                  sudo docker-compose rm backend
+                  # sudo docker-compose down -v
+                  touch .env
+                  echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+                  echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+                  echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+                  echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+                  echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+                  echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+                  # sudo docker-compose up -d --build
+                  sudo docker-compose up -d
+                  sudo docker-compose exec -it backend python manage.py makemigrations users
+                  sudo docker-compose exec -it backend python manage.py makemigrations tags
+                  sudo docker-compose exec -it backend python manage.py makemigrations recipes
+                  sudo docker-compose exec -it backend python manage.py migrate --noinput
+                  sudo docker-compose exec -it backend python manage.py collectstatic --no-input
   send-message:
     runs-on: ubuntu-latest
     needs: deploy
