--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }} 
+          passphrase: ${{ secrets.SSH_PASSPHRASE }} 
           script: |
             cd foodgram/infra
             sudo docker pull ${{ secrets.DOCKER_BACKEND }}
@@ -75,8 +75,8 @@ jobs:
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            echo DB_HOST=${{ secrets.HOST }} >> .env
+            echo DB_PORT=${{ secrets.PORT }} >> .env
             sudo docker-compose up -d
     send-message:
       runs-on: ubuntu-latest
