--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,18 +26,32 @@ jobs:
         run: |
           python -m flake8 
 
-  build-and-push:
+  build_and_push:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: test
+    if: github.ref == 'refs/heads/main'
     steps:
-      - name: Build and push to Docker Hub
-        run: |
-          docker build -t ${{ secrets.DOCKER_BACKEND }} backend
-          docker push ${{ secrets.DOCKER_BACKEND }}
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_BACKEND }}
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: build_and_push
     steps:
       - name: Deploy
         run: |
