--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,27 +50,36 @@ jobs:
           tags: ${{ secrets.DOCKER_BACKEND }}
 
   deploy:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build_and_push
     steps:
-      - name: Deploy
-        run: |
-          ssh ${{ secrets.USER }}@${{ secrets.HOST }} << EOF
-          cd foodgram/infra
-          sudo docker pull ${{ secrets.DOCKER_BACKEND }}
-          sudo docker pull ${{ secrets.DOCKER_FRONTEND }}
-          sudo docker-compose stop
-          sudo docker-compose rm backend
-          rm.env
-          touch.env
-          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >>.env
-          echo DB_NAME=${{ secrets.DB_NAME }} >>.env
-          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >>.env
-          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >>.env
-          echo DB_HOST=${{ secrets.HOST }} >>.env
-          echo DB_PORT=${{ secrets.PORT }} >>.env
-          sudo docker-compose up -d
-          EOF
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            sudo docker pull ${{ secrets.DOCKER_BACKEND }}
+            sudo docker-compose stop
+            sudo docker-compose rm backend
+            rm .env
+            touch .env
+            echo SECRET_KEY='${{ secrets.SECRET_KEY }}' >> .env  
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env 
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env 
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env 
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.HOST }} >> .env
+            echo DB_PORT=${{ secrets.PORT }} >> .env
+            sudo docker-compose up -d --build
+            sudo docker-compose exec -T backend python manage.py makemigrations
+            sudo docker-compose exec -T backend python manage.py migrate
+            sudo docker-compose exec -T backend python manage.py load_ingredients --path=ingredients.csv
+            sudo docker-compose exec -T backend python manage.py load_tags --path=tags.csv
+            sudo docker-compose exec -T backend python manage.py collectstatic --no-input
 
   send-message:
     runs-on: ubuntu-latest
