--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
+            cd foodgram
             sudo docker pull ${{ secrets.DOCKER_BACKEND }}
             sudo docker-compose stop
             sudo docker-compose rm backend
