--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
           script: |
             cd foodgram
             sudo docker-compose down
-            sudo docker pull 
+            sudo docker-compose pull 
             sudo docker-compose stop
             sudo docker-compose rm backend
             rm .env
