--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,23 +1,21 @@
 server {
     server_tokens off;
     listen 80;
-    server_name 0.0.0.1;
+    server_name 62.84.123.226 edagram.zapto.org;
 
     location /media/ {
-        autoindex on;
-        alias /media/;
-    }
-
-    location /static/rest_framework/ {
-        autoindex on;
-        alias /static/rest_framework/;
+        root /var/html/;
     }
 
     location /static/admin/ {
-        autoindex on;
-        alias /static/admin/;
+        root /var/html/;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/;
     }
     
+
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
     }
