--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     server_tokens off;
     listen 80;
-    server_name 62.84.123.226 edagram.zapto.org;
+    server_name 62.84.123.226;
 
     location /media/ {
         root /var/html/;
@@ -35,7 +35,6 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        alias /static/;
         index  index.html index.htm;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
