--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,17 +65,7 @@ jobs:
             cd foodgram
             sudo docker-compose down
             sudo docker system prune -af
-            sudo docker-compose pull
-            sudo rm .env
-            sudo touch .env
-            echo SECRET_KEY='${{ secrets.SECRET_KEY }}' >> .env  
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env 
-            echo DB_NAME=${{ secrets.DB_NAME }} >> .env 
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env 
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.PORT }} >> .env
-            sudo docker-compose up -d --build
+            sudo docker-compose pull up -d
             sudo docker-compose exec -T backend python manage.py makemigrations
             sudo docker-compose exec -T backend python manage.py migrate
             sudo docker-compose exec -T backend python manage.py load_ingredients --path=ingredients.csv
