--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,47 +1,17 @@
 version: '3.3'
-
 services:
 
-  db:
-    image: postgres:13-alpine
+  frontend:
+    container_name: foodgram-front
+    build: ../frontend
     volumes:
-      - /var/lib/postgresql/data/
-    env_file:
-      - ./.env
-
-  backend:
-    image: goldreborn/foodgram_backend:latest
-    expose:
-      - 8000
-    restart: always
-    volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
-    depends_on:
-      - db
-    env_file:
-      - ./.env
-
+      - ../frontend/:/app/result_build/
   nginx:
-    image: nginx:1.19.3
+    container_name: foodgram-proxy
+    image: nginx:1.25.4-alpine
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/app/static/
-      - media_value:/app/media/
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs:/usr/share/nginx/html/api/docs/
-    restart: always
-    depends_on:
-      - frontend
-
-  frontend:
-    image: goldreborn/foodgram_frontend:latest
-    volumes:
-      - ../frontend/:/app/result_build/
-
-volumes:
-  postgres_data:
-  static_value:
-  media_value:
+      - ../docs/:/usr/share/nginx/html/api/docs/
